certified-kubernetes-administrator-course/docs/03-Scheduling/validating-admission-policy-playground/multiple-validations/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: nginx
      volumes:
        - name: empty
          emptyDir: {}
